# libnbd

./: .gitignore  .gitlab-ci.yml  Makefile.am  configure.ac  run.in
ci/: build_script.sh
ci/cirrus/: freebsd-11.vars  macos-1015.vars
ci/containers/: centos-7.Dockerfile  centos-8.Dockerfile  centos-stream.Dockerfile  ci-centos-7.Dockerfile  ci-centos-8.Dockerfile  ci-centos-stream.Dockerfile  ci-debian-10-cross-aarch64.Dockerfile  ci-debian-10-cross-armv6l.Dockerfile  ci-debian-10-cross-armv7l.Dockerfile  ci-debian-10-cross-i686.Dockerfile  ci-debian-10-cross-mips.Dockerfile  ci-debian-10-cross-mips64el.Dockerfile  ci-debian-10-cross-mipsel.Dockerfile  ci-debian-10-cross-ppc64le.Dockerfile  ci-debian-10-cross-s390x.Dockerfile  ci-debian-10.Dockerfile  ci-debian-sid-cross-aarch64.Dockerfile  ci-debian-sid-cross-armv6l.Dockerfile  ci-debian-sid-cross-armv7l.Dockerfile  ci-debian-sid-cross-i686.Dockerfile  ci-debian-sid-cross-mips64el.Dockerfile  ci-debian-sid-cross-mipsel.Dockerfile  ci-debian-sid-cross-ppc64le.Dockerfile  ci-debian-sid-cross-s390x.Dockerfile  ci-debian-sid.Dockerfile  ci-fedora-32.Dockerfile  ci-fedora-33.Dockerfile  ci-fedora-rawhide-cross-mingw32.Dockerfile  ci-fedora-rawhide-cross-mingw64.Dockerfile  (+32 more)
generator/: Makefile.am  generator
lib/: handle.c
rust/: Cargo.toml  Makefile.am  run-tests
rust/libnbd-rs/: Cargo.toml.in
rust/libnbd-rs/examples/: hello-cb.rs  hello-nbd.rs
rust/libnbd-rs/src/: base.rs  glue.current.rs  glue.partial.rs  glue.rs  glue.ugly_but_working.rs  lib.rs  nbd_error.rs
rust/libnbd-sys/: Cargo.toml.in  build.rs
